1999-07-13  Tom Tromey  <tromey@cygnus.com>

	* empty3.test: New file.
	* Makefile.am (TESTS): Added empty3.test.

	* empty2.test: Also look for `pavel.o'.

	* empty2.test: New file.
	* Makefile.am (TESTS): Added empty2.test.

1999-05-27  Tom Tromey  <tromey@cygnus.com>

	* subobj3.test: New file.
	* Makefile.am (TESTS): Added subobj3.test.
	(XFAIL_TESTS): Likewise.

	* ltlibobjs.test: New file.
	* Makefile.am (TESTS): Added ltlibobjs.test.
	(XFAIL_TESTS): Added ltlibobjs.test.

	* Makefile.am (XFAIL_TESTS): Added sourcesub.test.

1999-05-19  Tom Tromey  <tromey@cygnus.com>

	* specflags4.test: Typo fix.

	* specflags4.test: New file.  From Pavel Roskin.
	* Makefile.am (TESTS): Added specflags4.test.

	* specflags.test: Added regression test for missing space.

1999-05-13  Tom Tromey  <tromey@cygnus.com>

	* sourcesub.test: New file.
	* Makefile.am (TESTS): Added sourcesub.test.

1999-05-01  Tom Tromey  <tromey@cygnus.com>

	* libobj2.test: Reverted previous change; it is incorrect.

	* libobj2.test: Error if libtu.a.P is mentioned.

1999-04-27  Tom Tromey  <tromey@cygnus.com>

	* cond9.test: New file.  From Raja R Harinath.
	* Makefile.am (TESTS): Added cond9.test.

	* pluseq8.test: New file.
	* Makefile.am (TESTS): Added pluseq8.test.

	* canon5.test: Updated to reflect change to MACRO_PATTERN.

	* specflags3.test: New file.
	* Makefile.am (TESTS): Added specflags3.test.
	(TESTS): Now lists one file per line, for simpler maintenance.

	* specflags2.test: New file.
	* specflags.test: New file.
	* Makefile.am (TESTS): Added specflags.test, specflags2.test.

1999-04-27  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* canon5.test (bin_PROGRAMS): New file.
	* Makefile.am (TESTS): Added canon5.test.

1999-04-20  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* libobj10.test: New file.
	* Makefile.am (TESTS): Added libobj10.test.

1999-04-11  Tom Tromey  <tromey@cygnus.com>

	* subobj2.test: New file.
	* Makefile.am (TESTS): Added subobj2.test.

	* subobj.test: New file.