@@ -1,0 +1,23 @@
+#! /bin/sh
+
+# Test to make sure empty _SOURCES works.
+# From Paul Berrevoets.
+
+. $srcdir/defs || exit 1
+
+cat >> configure.in << 'END'
+AC_PROG_CC
+AC_SUBST(ZOO_OBJ)
+END
+
+cat > Makefile.am << 'END'
+noinst_PROGRAMS = zoo
+zoo_SOURCES =
+EXTRA_zoo_SOURCES = bar.c foo.c
+zoo_DEPENDENCIES = $(ZOO_OBJ)
+zoo_LDADD = $(zoo_DEPENDENCIES)
+END
+
+$AUTOMAKE || exit 1
+fgrep zoo. Makefile.in && exit 1
+exit 0
