@@ -1,3 +1,8 @@
+1999-07-27  Tom Tromey  <tromey@cygnus.com>
+
+	* empty4.test: New file.
+	* Makefile.am (TESTS): Added empty4.test.
+
 1999-07-13  Tom Tromey  <tromey@cygnus.com>
 
 	* empty3.test: New file.
